--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         </div>
         <div class="item3">DATO 2</div>
         <div class="item4">DATO 3</div>
+
+        <h1><a href="juegopelota.html">Ir a juego cuadrado div</a></h1>
     </div>
 </body>
 </html>
